# hyprlauncher

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  cli.rs  config.rs  font.rs  geometry.rs  launcher.rs  layout.rs  main.rs  model.rs  style.rs  wallpaper_preview.rs
src/app/: input.rs  lifecycle.rs  renderer.rs
src/desktop/: entry.rs  icon.rs  launch.rs  mod.rs  parser.rs  scanner.rs
src/render/: draw.rs  mod.rs  painter.rs  text.rs
src/theme/: color.rs  hyprcolor.rs  mod.rs
