[package]
name = "hyprlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
env_logger = "0.11"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
smithay-client-toolkit = "0.20"
tiny-skia = "0.12"
wayland-client = "0.31"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2
